# spikes

./: .gitignore  AGENTS.md  BRAND.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-MODEL.md  LICENSE.md  OVERHAUL.md  README.md  install.sh  package-lock.json  package.json  shaping.md  smithery.yaml  tensions.json
.agent-ci/: README.md
.factory/: init.sh  services.yaml
.factory/research/: rmcp-sdk.md
.githooks/: pre-commit-user  update-readme-tree.py
.github/workflows/: deploy.yml  release.yml  test.yml
action/: README.md  action.yml  check.sh
cli/: Cargo.toml
cli/assets/: spikes.js
cli/src/: auth.rs  config.rs  error.rs  main.rs  output.rs  spike.rs  storage.rs
cli/src/commands/: auth_keys.rs  billing.rs  config_cmd.rs  dashboard.rs  delete.rs  deploy.rs  export.rs  hotspots.rs  init.rs  inject.rs  list.rs  login.rs  logout.rs  magic.rs  mcp.rs  mod.rs  pull.rs  push.rs  remote.rs  resolve.rs  reviewers.rs  serve.rs  share.rs  shares.rs  show.rs  sync.rs  unshare.rs  update.rs  upgrade.rs  usage.rs  whoami.rs
cli/src/tui/: app.rs  mod.rs  ui.rs
cli/templates/cloudflare/: index.ts.tmpl  package.json.tmpl  schema.sql  tsconfig.json  wrangler.toml.tmpl
cli/tests/: action_gate.rs  auth_commands.rs  http_errors.rs  integration.rs  mcp_integration.rs  serve_security.rs
cli/tests/common/: mod.rs
docs/: API.md  agent-readiness.md  cli-reference.md  mcp-directory-submissions.md  mcp.md  mission-plan-agent-readiness.md  rollback.md  self-hosting.md  stripe-projects-followup.md  widget-attributes.md
posts/: vibe-coding-feedback.md
site/: SCREENCAST-SCRIPT.md  _headers  _redirects  _routes.json  agents.md  docs.html  docs.html.md  index-v2.html  index.html  install.sh  llms-full.txt  llms.txt  supporters.html  supporters.json  widget.js
site/worker/: README.md  package-lock.json  package.json  schema.sql  wrangler.toml
templates/cloudflare/: README.md  schema.sql  setup.sh  wrangler.toml.example
tests/widget/: README.md  package-lock.json  (+2 more)
video/: README.md  STORYBOARD.md  package-lock.json  package.json  tsconfig.json
widget/: dashboard.html  edit.js  review.js  spikes.js  test-edit-mode.html  test-review-mode.html  test.html
workflows-local/: test.yml  widget.yml
(+162 files in other folders)
