[package]
name = "spikes"
version = "0.1.0"
edition = "2021"
description = "Drop-in feedback collection for static HTML mockups"
license = "MIT"
repository = "https://github.com/moritzbierling/spikes"
homepage = "https://spikes.sh"
keywords = ["feedback", "mockups", "design", "review", "cli"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Moritz Bierling <moritz@bierling.net>"]
readme = "../README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7"
csv = "1.3"
thiserror = "2"
toml = "0.8"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
walkdir = "2"
ureq = { version = "2", features = ["json"] }
ratatui = "0.28"
crossterm = "0.28"
