[package]
name = "spikes"
version = "0.3.1"
edition = "2021"
description = "Drop-in feedback collection for static HTML mockups"
license = "MIT"
repository = "https://github.com/moritzbierling/spikes"
homepage = "https://spikes.sh"
keywords = ["feedback", "mockups", "design", "review", "cli"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Moritz Bierling <moritz@bierling.net>"]
readme = "../README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7"
csv = "1.3"
thiserror = "2"
toml = "0.8"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
walkdir = "2"
ureq = { version = "2", features = ["json"] }
dirs = "5"
webbrowser = "1"
rmcp = { version = "0.17", features = ["server", "transport-io", "macros"] }
schemars = "1.0"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
wiremock = "0.6"
predicates = "3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio-test = "0.4"
serial_test = "3"
